charts/workflows/test-policy/auth-daemon-config-clone/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: auth-daemon-config-clone
spec:
  concurrent: false
  steps:
    - try:
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: workflows
        - apply:
            resource:
              apiVersion: v1
              kind: Secret
              metadata:
                name: auth-daemon-config
                namespace: workflows
              data:
                config.yaml: Y29uZmlnOiB2YWx1ZQ==
        - apply:
            resource:
              apiVersion: v1
              kind: Namespace
              metadata:
                name: auth-daemon-session
                labels:
                  app.kubernetes.io/managed-by: sessionspaces
        - assert:
            resource:
              apiVersion: v1
              kind: Secret
              metadata:
                name: auth-daemon-config
                namespace: auth-daemon-session
